--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -9,9 +9,7 @@ nytimes {
     apiKey = ${NYTIMES_API_KEY}
     host =   "api.nytimes.com"
     clientLabel = "nytimesBooks"
-    path {
-        books = "svc/books/v3/lists.json"
-        names = "svc/books/v3/lists/names.json"
-    }
+    path =  "svc/books/v3/lists/best-sellers/history.json"
+
 }
 
