--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -1,12 +1,12 @@
 redis {
-    host = ${REDIS_HOST}
-    port = ${REDIS_PORT}
-    password = ${REDIS_PASSWORD}
+    host = localhost
+    port = 6379
+    password = admin
     ttl = 180
 }
 
 nytimes {
-    apiKey = ${NYTIMES_API_KEY}
+    apiKey = "someKey"
     host =   "api.nytimes.com"
     clientLabel = "nytimesBooks"
     path =  "/svc/books/v3/lists/best-sellers/history.json"
